parser/tests/snapshots/errors__module_nonsense.snap
---
source: parser/tests/errors.rs
expression: err

---
error: Unmatched right parenthesis
  ┌─ [test snippet]:1:1
  │
1 │ ))
  │ ^


